ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: e-store
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /ratings-service(/|$)(.*)
            backend:
              serviceName: ratings-service
              servicePort: 8080
          - path: /customers-service(/|$)(.*)
            backend:
              serviceName: customers-service
              servicePort: 8080
          - path: /products-service(/|$)(.*)
            backend:
              serviceName: products-service
              servicePort: 8080
          - path: /analytics-service(/|$)(.*)
            backend:
              serviceName: analytics-service
              servicePort: 8080
          - path: /orders-service(/|$)(.*)
            backend:
              serviceName: orders-service
              servicePort: 8080
          - path: /stock-service(/|$)(.*)
            backend:
              serviceName: stock-service
              servicePort: 8080
          - path: /invoice-service(/|$)(.*)
            backend:
              serviceName: invoice-service
              servicePort: 8080
          - path: /notification-service(/|$)(.*)
            backend:
              serviceName: notification-service
              servicePort: 8080
          - path: /shopping-cart-service(/|$)(.*)
            backend:
              serviceName: shopping-cart-service
              servicePort: 8080
